actually goes to the contact finish form on complete, fixed navigation button alignment, fixed form test submit variables

--- a/css/contact.css
+++ b/css/contact.css
@@ -133,6 +133,7 @@ textarea {
 
 [type="submit_nav"] {
     width: 165px;
+    vertical-align: middle;
 }
 
 .Return{
