--- a/css/styles.css
+++ b/css/styles.css
@@ -142,4 +142,5 @@ p404 {
 
 [type="submit_nav"] {
     width: 165px;
+    vertical-align: middle;
 }
